# newsletter-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  jq  notes.norg
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20230808032325_create_subscriptions_table.sql  20230817184034_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  config.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: Dockerfile  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
