[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.0"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", # use the actix runtime futures and rustls as TLS backend;
    "macros",               # access to sqlx::query! and sqlx::query_as!
    "postgres",
    "uuid",                 # mapping SQL UUIDs to the Uuid type
    "chrono",               # mapping SQL timestamptz to the DateTime<T>
    "migrate",              # access to sqlx-cli
    "offline",
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
